<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aplicacio1</string>
    <string name="action_settings">Settings</string>
    <string name="aplicacion">Aplicación</string>
    <string name="jugar">Jugar</string>
    <string name="configurar">Configurar</string>
    <string name="acercade">Acerca de</string>
    <string name="salir">Puntuacions</string>
    <string name="sobreAplicacion">Esta aplicacion ha sido creada por..</string>
    <string name="configuracio">Configuración</string>
    <string name="sobre">Sobre..</string>
    <string name="pa_key">Preferencias Principales</string>
    <string name="p1_summary">Se reproduce música de fondo</string>
    <string name="p1_title">Reproducir música</string>
    <string name="p1_key">musica</string>
    <string name="p2_key">grafics</string>
    <string name="p2_summary">Se escoge la representación de gráficos</string>
    <string name="p3_title">Número de fragmentos</string>
    <string name="p3_summary">En cuantos trozos se divide un asteroide</string>
    <string name="p2_title">Tipo de gráficos</string>
    <string name="modeMult">Modo multijugador</string>
    <string name="activarMult">Activar Multijugadores</string>
    <string name="maxJugadors">Máximo de jugadores</string>
    <string name="tipoConexio">Tipo de connexió</string>
    <string name="activarMultKey">activarMultKey</string>
    <string name="maxJugadorsKey">maxJugadorsKey</string>
    <string name="tipoConexioKey">tipoConexioKey</string>
    <string name="text4">Puntuacions</string>
    <string name="text5">No hi ha puntuacions</string>
    <string name="text6">Altre texte</string>
    <string name="control">Tipus de control</string>
    <string name="tactil">Tactil</string>
    <string name="teclat">Teclat</string>
    <string name="sensor">Moviment</string>
    <string name="control_key">control_key</string>
    <string name="control_summary">Elegeix els tipus de controls</string>
    <string name="cansons">Elegeix la canço</string>
    <string name="canso_summary">Elegeix la canço que més t agradi</string>
    <string name="song_key">song_key</string>
    <string name="frag_key">frag_key</string>

</resources>
