<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pa_key" >

    <CheckBoxPreference
        android:enabled="true"
        android:key="@string/p1_key"
        android:summary="@string/p1_summary"
        android:title="@string/p1_title" />

    <ListPreference
        android:entries="@array/cansons"
        android:entryValues="@array/cansonsValors"
        android:key="@string/song_key"
        android:summary="@string/canso_summary"
        android:title="@string/cansons" android:defaultValue="1"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/tipusGrafics"
        android:entryValues="@array/tipusGraficsValors"
        android:key="@string/p2_key"
        android:summary="@string/p2_summary"
        android:title="@string/p2_title" />

    <EditTextPreference
        android:defaultValue="3"
        android:key="@string/frag_key"
        android:summary="@string/p3_summary"
        android:title="@string/p3_title" />

    <PreferenceCategory android:title="@string/modeMult" >
        <CheckBoxPreference
            android:key="@string/activarMultKey"
            android:title="@string/activarMult" />

        <EditTextPreference
            android:key="@string/maxJugadorsKey"
            android:title="@string/maxJugadors" />

        <ListPreference
            android:entries="@array/tipusConexio"
            android:entryValues="@array/tipusConexio"
            android:key="@string/tipoConexioKey"
            android:title="@string/tipoConexio" />
    </PreferenceCategory>

    <MultiSelectListPreference
        android:enabled="true"
        android:entries="@array/tipusControl"
        android:entryValues="@array/tipusControlValors"
        android:key="@string/control_key"
        android:summary="@string/control_summary"
        android:title="@string/control" />

</PreferenceScreen>